breaking css; suggestions handling

--- a/src/bundle/Resources/public/scss/ibexa.scss
+++ b/src/bundle/Resources/public/scss/ibexa.scss
@@ -132,4 +132,6 @@
 @import 'user-profile';
 @import 'additional-actions';
 @import 'user-mode-badge';
+@import 'ai-wrapper';
 @import 'ai-component';
+@import 'ai-component-input';
