--- a/src/bundle/Resources/views/themes/admin/ui/component/ai/variants.html.twig
+++ b/src/bundle/Resources/views/themes/admin/ui/component/ai/variants.html.twig
@@ -43,6 +43,7 @@
             'data-input-selector': '.ibexa-field-edit-preview__media',
             'data-output-selector': '.ibexa-data-source__field--alternativeText input',
             'data-type': 'VariantsImgToText',
+            'data-save-prev-value': save_prev_value is defined and save_prev_value == false ? 0 : 1,
         },
         subitems: [
             {
