--- a/src/bundle/Resources/views/themes/admin/ui/component/ai/basic.html.twig
+++ b/src/bundle/Resources/views/themes/admin/ui/component/ai/basic.html.twig
@@ -7,6 +7,7 @@
     'data-input-selector': '.ibexa-field-edit-preview__media',
     'data-output-selector': '.ibexa-data-source__field--alternativeText input',
     'data-type': 'BasicImgToText',
+    'data-save-prev-value': save_prev_value is defined and save_prev_value == false ? 0 : 1,
 } %}
 
 {% block generate_btn %}
